fix: collapsing divs on safari. fix: safari box inner shadows missing

--- a/src/css/Dom.css
+++ b/src/css/Dom.css
@@ -24,7 +24,6 @@
   overflow-y: auto;
   flex-grow: 1;
   width: 100%;
-  height: 100%;
   margin: 0;
   padding-top: 10px;
   padding-bottom: 10px;
